# room4doom

./: .buildconfig  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DOOM_SRC_REVIEW.md  LICENSE  OPL2_SPEC.md  README.md  TODO.md  build.rs  flatpak.yml  generated-sources.json  justfile  rustfmt.toml  scanline-spans-lib.rs  scanline-spans-render.rs
game/: Cargo.toml  build.rs
game-exe/: Cargo.toml
game-exe/room4doom.xcodeproj/: project.pbxproj
game-exe/src/: blit.rs  cheats.rs  cli.rs  config.rs  d_main.rs  game.rs  input.rs  loop_sdl2.rs  loop_winit.rs  main.rs  test_funcs.rs  timestep.rs  wipe.rs
game-exe/src/shaders/: basic.rs  cgwg_crt.rs  lottes_crt.rs  lottes_reduced.rs  mod.rs
game-state/: Cargo.toml
game-state/src/: game_impl.rs  lib.rs  machination.rs  menu_impl.rs
game-traits/: Cargo.toml
game-traits/src/: lib.rs  util.rs
game/src/: cheats.rs  config.rs  d_main.rs  entities.rs  flags.rs  game.rs  input.rs  main.rs  opts.rs  test_funcs.rs  timestep.rs  utilities.rs
game/src/renderer/: bsp.rs  defs.rs  mod.rs  plane.rs  segs.rs  things.rs
game/src/shaders/: basic.rs  blur.rs  cgwg_crt.rs  lottes_crt-bloom.rs  lottes_crt.rs  mod.rs
gamelib/: Cargo.toml
gamelib/benches/: linked_lists.rs  parse_map.rs
gamelib/src/: angle.rs  bsp.rs  d_main.rs  d_thinker.rs  doom_def.rs  entities.rs  flags.rs  game.rs  info.rs  input.rs  level.rs  lib.rs  local.rs  map.rs  map_data.rs  map_object.rs  p_ceiling.rs  p_doors.rs  p_enemy.rs  p_floor.rs  p_interaction.rs  p_lights.rs  p_local.rs  p_map.rs  p_map_object.rs  p_map_util.rs  p_platforms.rs  p_plats.rs  p_player_sprite.rs  p_spec.rs  p_specials.rs  p_switch.rs  player.rs  r_bsp.rs  r_defs.rs  r_segs.rs  segs.rs  sounds.rs  thinker.rs  tic_cmd.rs  (+1 more)
gamelib/src/info/: map_object_info.rs  mapobject.rs  mod.rs  states.rs
gamelib/src/level_data/: level.rs  map_data.rs  map_defs.rs  mod.rs  node.rs
gamelib/src/play/: ceiling.rs  d_thinker.rs  doors.rs  enemy.rs  floor.rs  interaction.rs  lights.rs  map_object.rs  mod.rs  movement.rs  platforms.rs  player.rs  specials.rs  switch.rs  utilities.rs
gamelib/src/renderer/: basic.rs  bsp.rs  cgwg_crt.rs  defs.rs  lottes_crt.rs  mod.rs  plane.rs  portals.rs  r_bsp.rs  r_defs.rs  r_segs.rs  segs.rs
gamelib/src/shaders/: basic.rs  cgwg_crt.rs  lottes_crt.rs  mod.rs
gameplay/: Cargo.toml
gameplay/benches/: parse_map.rs
gameplay/src/: angle.rs  bsp_trace.rs  demo_trace.rs  dirs.rs  doom_def.rs  info.rs  lib.rs  maputl.rs  player.rs  player_sprite.rs  save.rs  sector_ext.rs  test_support.rs  thinker.rs  tic_cmd.rs  trig.rs  utilities.rs
gameplay/src/env/: ceiling.rs  doors.rs  floor.rs  generalized.rs  lights.rs  mod.rs  platforms.rs  specials.rs  switch.rs  teleport.rs
gameplay/src/info/: map_object_info.rs  mod.rs  sounds.rs  states.rs
gameplay/src/lang/: english.rs
gameplay/src/level/: bsp3d.rs  flags.rs  level.rs  map_data.rs  map_defs.rs  mod.rs  node.rs  portals.rs  pvs.rs  tests.rs  triangulation.rs
gameplay/src/pic/: animations.rs  mod.rs  sprites.rs  switches.rs
gameplay/src/play/: ceiling.rs  d_thinker.rs  doors.rs  enemy.rs  floor.rs  interaction.rs  lights.rs  map_object.rs  mod.rs  movement.rs  platforms.rs  player.rs  player_sprite.rs  specials.rs  switch.rs  teleport.rs  utilities.rs
gameplay/src/thing/: enemy.rs  enemy_behaviour.rs  enemy_movement.rs  interact.rs  mod.rs  movement.rs  shooting.rs
gamestate/: Cargo.toml
gamestate-traits/: Cargo.toml
gamestate-traits/src/: keys.rs  lib.rs  util.rs
gamestate/src/: game_impl.rs  lib.rs  machination.rs  subsystems.rs
input/: Cargo.toml
input/src/: config.rs  lib.rs  sdl2_input.rs  winit_input.rs
level/: Cargo.toml
level/src/: env_kinds.rs  env_query.rs  env_target.rs  flags.rs  level_data.rs  lib.rs  map_array.rs  map_defs.rs  special_encode.rs
level/src/bsp3d/: build.rs  mod.rs  movers.rs  node.rs  parse.rs  runtime.rs
level/tests/: blockmap_test.rs  bsp3d_contract.rs  bsp3d_e1m1_mover_test.rs  bsp3d_e1m1_tests.rs  bsp3d_e1m2_door_test.rs  bsp3d_e1m2_test.rs  bsp3d_e1m3_stairs_test.rs  bsp3d_e1m5_mover_aabb.rs  bsp3d_e5m1_mover_test.rs  bsp3d_e5m2_floor_mover.rs  bsp3d_e5m2_ld164.rs  bsp3d_e5m7_floor_mover.rs  bsp3d_e6m1_shared_wall.rs  bsp3d_e6m1_sigil2_test.rs  bsp3d_eviternity_sky_test.rs  bsp3d_geometry.rs  bsp3d_map03_stairs.rs  bsp3d_map29_ld10.rs  bsp3d_movers.rs  bsp3d_sky.rs  mover_targets.rs  rbsp_cache.rs  special_normalization.rs  udmf_load.rs
lib/: Cargo.toml
lib/benches/: linked_lists.rs  parse_map.rs
lib/src/: angle.rs  cheats.rs  d_main.rs  doom_def.rs  game.rs  lib.rs  tic_cmd.rs
lib/src/info/: map_object_info.rs  mod.rs
lib/src/level/: level.rs  map_data.rs  map_defs.rs  node.rs
lib/src/level_data/: level.rs  map_data.rs  map_defs.rs  mod.rs  node.rs
lib/src/pic/: animations.rs  mod.rs  sprites.rs  switches.rs
lib/src/play/: ceiling.rs  (+16 more)
map-data/: Cargo.toml
map-data/src/: bsp3d.rs  flags.rs  lib.rs  map_data.rs  map_defs.rs  node.rs  pvs.rs  triangulation.rs
menu/doom/: Cargo.toml
menu/traits/: Cargo.toml
pic-data/: Cargo.toml
pic-data/src/: colour.rs  lib.rs  parallel.rs  sky.rs
pvs-tool/: Cargo.toml
pvs-tool/src/: main.rs  viewer.rs
r-software/: Cargo.toml
r-software/src/: bsp.rs  defs.rs  lib.rs  planes.rs  segs.rs  things.rs  utilities.rs
render/backend/: Cargo.toml
render/render-target/: Cargo.toml
render/render3d/: Cargo.toml
render/software/: Cargo.toml
render/software25d/: Cargo.toml
render/software3d/: Cargo.toml
render/wgpu3dbsp/: Cargo.toml
sound-sdl2/: Cargo.toml
sound-sdl2/src/: info.rs  lib.rs  mus2midi.rs  music.rs  test_sdl2.rs  timidity.rs
sound/nosnd/: Cargo.toml  tmp.mid
sound/rodio/: Cargo.toml
ui/: Cargo.toml
ui/src/: hud_messages.rs  lib.rs  menu.rs
wad/: Cargo.toml
wad/benches/: bench.rs  parse_map.rs  wad_loading.rs
wad/src/: boom.rs  compat.rs  extended.rs  iterators.rs  lib.rs  lumps.rs  map.rs  nodes.rs  types.rs  udmf.rs  wad.rs  write.rs
wad/tests/: extended_tests.rs  iterator_tests.rs  wad_tests.rs
(+606 files in other folders)
