[workspace]
members = [
    "tools/test-utils",
    "wad",
    "game-exe",
    "gameplay",
    "gamestate",
    "gamestate-traits",
    "ui",
    "input",
    "math",
    "render/backend",
    "render/common",
    "render/software25d",
    "render/software3d",
    "tools/voxel-viewer",
    "sound/common",
    "sound/rodio",
    "sound/opl2_emulator",
    "level",
    "tools/bsp-viewer",
    "tools/wad-tool",
    "tools/multigen",
    "tools/rbsp",
    "ui-util",
    "game-config",
    "pic-data",
]
default-members = ["game-exe"]
resolver = "2"

[workspace.package]
authors = ["Luke Jones <luke@ljones.dev>"]
version = "1.0.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
test-utils = { path = "./tools/test-utils" }
wad = { path = "./wad" }
input = { path = "./input" }
math = { path = "./math" }
game-config = { path = "./game-config" }
gameplay = { path = "./gameplay" }
pic-data = { path = "./pic-data" }
gamestate = { path = "./gamestate" }
gamestate-traits = { path = "./gamestate-traits" }
doom-ui = { path = "./ui" }
hud-util = { path = "./ui-util" }

sound-common = { path = "./sound/common" }
sound-rodio = { path = "./sound/rodio" }
opl2_emulator = { path = "./sound/opl2_emulator" }
render-common = { path = "./render/common" }
render-backend = { path = "./render/backend" }
software3d = { path = "./render/software3d" }
software25d = { path = "./render/software25d" }
level = { path = "./level" }
rbsp = { path = "./tools/rbsp" }

winit = "0.30"
pixels = "0.15"
softbuffer = { git = "https://github.com/flukejones/softbuffer", branch = "madsmtm/iosurface" }
coarse-prof = "0.2"
glam = "*"
sdl2 = { version = "0.38", features = [
    "use_mac_framework",
    "unsafe_textures",
] }

argh = "0.1.12"
eframe = "0.31"
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bincode = "1.0"
crc32fast = "1.3"
bitflags = "2"

zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
log = { version = "*" }
simplelog = { version = "*" }
criterion = { version = "0.5", features = ["html_reports"] }
dirs = "~5.0"
nanoserde = { git = "https://github.com/not-fl3/nanoserde.git", default-features = false, features = [
    "ron",
] }

#[workspace.dependencies.cargo-husky]
#version = "1"
#default-features = false
#features = ["user-hooks"]

# 915fps | codegen-units=1 -> 930fps, no other change
# 9.30s buildtime
# 2.6MB binary
[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"
panic = "abort"
debug = false
strip = true

# 880fps | codegen-units=1 -> no changes
# 9.22s buildtime
# 2.4MB binary
[profile.release-mid]
inherits = "release"
opt-level = 2

# 880fps | codegen-units=1 -> no changes
# 8.85s buildtime
# 2.1MB binary
[profile.release-small]
inherits = "release"
opt-level = "s"

# 412fps | codegen-units=1 -> 420fps, no other change
# 14.82s buildtime
# 1.4MB binary
# with RUSTFLAGS="-C llvm-args=-force-vector-width=4"
# 460fps
# 2.1MB binary
[profile.release-tiny]
inherits = "release"
opt-level = "z"

########### LTO Full Profiles ###########

# 900fps | codegen-units=1 -> 915fps, no other change
# 19.15s buildtime
# 2.1MB binary
[profile.release-lto]
inherits = "release"
lto = "fat"

# 840fps | codegen-units=1 -> no changes
# 17.92s buildtime
# 1.9MB binary
[profile.release-lto-mid]
inherits = "release-lto"
opt-level = 2

# 815fps | codegen-units=1 -> no changes
# 15.55s buildtime
# 1.6MB binary
[profile.release-lto-small]
inherits = "release-lto"
opt-level = "s"

# 400fps | codegen-units=1 -> 421fps, 14s buildtime, no other changes
# 16.9s buildtime
# 1.4MB binary
[profile.release-lto-tiny]
inherits = "release-lto"
opt-level = "z"

[profile.dev]
debug = true
opt-level = 2
codegen-units = 1

[profile.bench]
lto = true
debug = true
opt-level = 3
codegen-units = 1

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
