[workspace]
members = [
    "tools/test-utils",
    "wad",
    "game-exe",
    "gameplay",
    "gamestate",
    "gamestate-traits",
    "ui",
    "input",
    "math",
    "render/backend",
    "render/common",
    "render/software25d",
    "render/software3d",
    "tools/voxel-viewer",
    "sound/common",
    "sound/rodio",
    "sound/opl2_emulator",
    "level",
    "tools/bsp-viewer",
    "tools/wad-tool",
    "tools/multigen",
    "tools/rbsp",
    "ui-util",
    "game-config",
    "pic-data",
]
default-members = ["game-exe"]
resolver = "2"

[workspace.package]
authors = ["Luke Jones <luke@ljones.dev>"]
version = "1.0.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
test-utils = { path = "./tools/test-utils" }
wad = { path = "./wad" }
input = { path = "./input" }
math = { path = "./math" }
game-config = { path = "./game-config" }
gameplay = { path = "./gameplay" }
pic-data = { path = "./pic-data" }
gamestate = { path = "./gamestate" }
gamestate-traits = { path = "./gamestate-traits" }
doom-ui = { path = "./ui" }
hud-util = { path = "./ui-util" }

sound-common = { path = "./sound/common" }
sound-rodio = { path = "./sound/rodio" }
opl2_emulator = { path = "./sound/opl2_emulator" }
render-common = { path = "./render/common" }
render-backend = { path = "./render/backend" }
software3d = { path = "./render/software3d" }
software25d = { path = "./render/software25d" }
level = { path = "./level" }
rbsp = { path = "./tools/rbsp" }

winit = "0.30"
pixels = "0.15"
softbuffer = { git = "https://github.com/flukejones/softbuffer", branch = "madsmtm/iosurface" }
coarse-prof = "0.2"
glam = "*"
sdl2 = { version = "0.38", features = [
    "use_mac_framework",
    "unsafe_textures",
] }

argh = "0.1.12"
eframe = "0.31"
egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bincode = "1.0"
crc32fast = "1.3"
bitflags = "2"

zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
log = { version = "*" }
simplelog = { version = "*" }
criterion = { version = "0.5", features = ["html_reports"] }
dirs = "~5.0"
nanoserde = { git = "https://github.com/not-fl3/nanoserde.git", default-features = false, features = [
    "ron",
] }

# 915fps | codegen-units=1 -> 930fps, no other change
# 9.30s buildtime
# 2.6MB binary
[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"
panic = "abort"
debug = false
strip = true

# 880fps | codegen-units=1 -> no changes
# 9.22s buildtime
# 2.4MB binary
[profile.release-mid]
inherits = "release"
opt-level = 2

# 880fps | codegen-units=1 -> no changes
# 8.85s buildtime
# 2.1MB binary
[profile.release-small]
inherits = "release"
opt-level = "s"

# 412fps | codegen-units=1 -> 420fps, no other change
# 14.82s buildtime
# 1.4MB binary
# with RUSTFLAGS="-C llvm-args=-force-vector-width=4"
# 460fps
# 2.1MB binary
[profile.release-tiny]
inherits = "release"
opt-level = "z"

########### LTO Full Profiles ###########

# 900fps | codegen-units=1 -> 915fps, no other change
# 19.15s buildtime
# 2.1MB binary
[profile.release-lto]
inherits = "release"
lto = "fat"

# 840fps | codegen-units=1 -> no changes
# 17.92s buildtime
# 1.9MB binary
[profile.release-lto-mid]
inherits = "release-lto"
opt-level = 2

# 815fps | codegen-units=1 -> no changes
# 15.55s buildtime
# 1.6MB binary
[profile.release-lto-small]
inherits = "release-lto"
opt-level = "s"

# 400fps | codegen-units=1 -> 421fps, 14s buildtime, no other changes
# 16.9s buildtime
# 1.4MB binary
[profile.release-lto-tiny]
inherits = "release-lto"
opt-level = "z"

[profile.dev]
debug = true
opt-level = 2
codegen-units = 1

[profile.bench]
lto = true
debug = true
opt-level = 3
codegen-units = 1

[workspace.lints.rust]
# `elided_lifetimes_in_paths` is `allow` because Slint generated globals
# (`app.global::<X>()`) all have a hidden lifetime parameter. ~250 sites of
# mechanical noise for no real safety win — the lifetime is benign and
# inferred correctly.
elided_lifetimes_in_paths = "allow"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "deny"
semicolon_in_expressions_from_macros = "deny"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = "deny"
unused_extern_crates = "deny"
unused_import_braces = "warn"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.rustdoc]
all = "warn"
broken_intra_doc_links = "deny"
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
allow_attributes_without_reason = "allow"

await_holding_lock = "deny"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
coerce_container_to_any = "warn"
dbg_macro = "deny"
debug_assert_with_mut_call = "warn"
default_union_representation = "warn"
doc_broken_link = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_include_without_cfg = "warn"
doc_link_with_quotes = "warn"
# doc_markdown flags identifier-shaped words in doc-prose that are missing
# backticks; ~240 hits across the workspace, mostly false positives.
doc_markdown = "allow"
elidable_lifetime_names = "warn"
empty_enums = "warn"
empty_enum_variants_with_brackets = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn" # todo: deny
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "deny"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "deny"
ignore_without_reason = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_over_hash_type = "warn"
iter_without_into_iter = "warn"
large_stack_arrays = "warn" # todo: deny
large_stack_frames = "deny"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "allow"
map_flatten = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "warn"
mem_forget = "deny"
mismatching_type_param_order = "warn"
missing_assert_message = "warn"
missing_enforced_import_renames = "warn"
missing_errors_doc = "allow"
missing_fields_in_debug = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
module_name_repetitions = "allow"
mut_mut = "warn"
mutex_integer = "deny"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_string_hashes = "warn"
negative_feature_names = "warn"
non_std_lazy_statics = "warn"
non_zero_suggestions = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
print_stderr = "allow" # often used in tests
print_stdout = "allow" # used for console wad loading print
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
rc_mutex = "deny"
readonly_write_lock = "deny"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
self_only_used_in_recursion = "warn"
semicolon_if_nothing_returned = "warn"
set_contains_or_insert = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
single_option_map = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_add = "deny"
string_add_assign = "deny"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suspicious_command_arg_space = "warn"
suspicious_xor_used_as_pow = "warn"
too_long_first_doc_paragraph = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "deny"
tuple_array_conversions = "warn"
unchecked_time_subtraction = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "allow"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
unused_trait_names = "warn"
unwrap_used = "allow" # many areas to fix, allow for now
use_self = "warn"
useless_let_if_seq = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"
