[package]
name = "room4doom"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../build.rs"
default-run = "room4doom"

[[bin]]
name = "room4doom"
path = "src/main.rs"

[features]
default = ["trig_lut", "sound-rodio", "display-pixels"]
hprof = ["render-target/hprof", "gameplay/hprof"]
render_stats = ["render-target/render_stats"]
trig_lut = ["render-target/trig_lut"]
sound-sdl2 = ["dep:sound-sdl2", "dep:sdl2"]
sound-rodio = ["dep:sound-rodio"]
display-sdl2 = ["render-target/display-sdl2", "input/input-sdl2", "dep:sdl2"]
display-softbuffer = ["render-target/display-softbuffer", "input/input-winit", "dep:winit"]
display-pixels = ["render-target/display-pixels", "input/input-winit", "dep:winit", "dep:pixels"]

[dependencies]
mimalloc = "0.1.43"

argh.workspace = true
input.workspace = true
menu-doom.workspace = true
gameplay.workspace = true
gamestate.workspace = true
gamestate-traits.workspace = true

intermission-doom.workspace = true
hud-doom.workspace = true
finale-doom.workspace = true
statusbar-doom.workspace = true
hud-util.workspace = true

sound-common.workspace = true
sound-sdl2 = { workspace = true, optional = true }
sound-rodio = { workspace = true, optional = true }
sound-nosnd.workspace = true
render-target.workspace = true
software3d.workspace = true
sdl2 = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
pixels = { workspace = true, optional = true }
wad.workspace = true

# utility deps
simplelog.workspace = true
dirs.workspace = true
nanoserde.workspace = true
coarse-prof.workspace = true

#[dev-dependencies]
#cargo-husky.workspace = true
