[package]
name = "diirdoom"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2018"
license = "MPL-2.0"
build = "../build.rs"

[[bin]]
name = "diirdoom"
path = "src/main.rs"

[dependencies]
sdl2 = "~0.34.0"
glam = "0.8.5"
gumdrop = "~0.7"
rand = "*"
gamelib = { path = "../gamelib" }
wad = { path = "../wad" }
golem = { git = "https://github.com/flukejones/golem/" }
