[package]
name = "diirdoom"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
license = "MPL-2.0"
build = "../build.rs"

[[bin]]
name = "diirdoom"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "~0.35.2", features = ["bundled"] }
glam = "0.8.5"
gumdrop = "~0.8"
doom-lib = { path = "../lib" }
rendering-trait = { path = "../rendering" }
software-rendering = { path = "../r-software" }
wad = { path = "../wad" }
golem = { git = "https://github.com/flukejones/golem/" }
env_logger = "^0.8"
