[package]
name = "diirdoom"
version = "0.9.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
license = "MPL-2.0"
build = "../build.rs"

[[bin]]
name = "diirdoom"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "~0.35.2", features = ["bundled", "mixer"] }
glam = "0.8.5"
gumdrop = "~0.8"
gameplay = { path = "../gameplay" }
sound-traits = { path = "../sound-traits" }
sound-sdl2 = { path = "../sound-sdl2" }
render-traits = { path = "../render-traits" }
render-soft = { path = "../render-soft" }
wad = { path = "../wad" }
golem = { git = "https://github.com/flukejones/golem/" }
env_logger = { version = "^0.8", default-features = false, features = ["termcolor", "atty"] }
