[package]
name = "gamelib"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2018"
build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
wad = { path = "../wad" }
sdl2 = "~0.34.0"
glam = "0.8.5"
gumdrop = "~0.7"
golem = { git = "https://github.com/flukejones/golem/" }

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "load_map"
harness = false
path = "benches/parse_map.rs"
