[package]
name = "gameplay"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../build.rs"

[features]
null_check = []
safety_check = []
hprof = []

[dependencies]
map-data.workspace = true
math.workspace = true
sound-common.workspace = true
wad.workspace = true
glam.workspace = true
log.workspace = true
coarse-prof.workspace = true
serde = { version = "1.0", features = ["derive"] }
dirs.workspace = true
bincode.workspace = true
crc32fast.workspace = true
rayon.workspace = true
bitflags.workspace = true

[dev-dependencies]
test-utils.workspace = true
