[package]
name = "gameplay"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../build.rs"

[features]
null_check = []
safety_check = []
hprof = []
fixed64 = ["math/fixed64"]
fixed64hd = ["math/fixed64hd"]
# Test-only marker gating sunder.wad node tests (WAD not in-repo):
#   cargo test -p gameplay --features wad-sunder
wad-sunder = []
wad-all = ["wad-sunder"]
software25d = []
software3d = []
wgpu3d = []

[dependencies]
game-config.workspace = true
level.workspace = true
pic-data.workspace = true
math.workspace = true
sound-common.workspace = true
wad.workspace = true
glam.workspace = true
log.workspace = true
coarse-prof.workspace = true
dirs.workspace = true
bitflags.workspace = true

[dev-dependencies]
test-utils.workspace = true

[lints]
workspace = true
