[package]
name = "gamestate"
version = "0.11.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
license = "MPL-2.0"

[dependencies]
gameplay.workspace = true
gamestate-traits.workspace = true
sound-traits.workspace = true
sound-sdl2.workspace = true
menu-doom.workspace = true
wad.workspace = true
# utility deps
toml.workspace = true
serde.workspace = true
