[package]
name = "gamestate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gameplay.workspace = true
gamestate-traits.workspace = true
sound-traits.workspace = true
sound-sdl2.workspace = true
sound-nosnd.workspace = true
menu-doom.workspace = true
wad.workspace = true

# utility deps
toml.workspace = true
serde.workspace = true
