[package]
name = "gamestate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
game-config.workspace = true
gameplay.workspace = true
log.workspace = true
pic-data.workspace = true
gamestate-traits.workspace = true
math.workspace = true
sound-common.workspace = true
wad.workspace = true
