[package]
name = "input"
version = "0.10.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
license = "MPL-2.0"

[features]

[dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["mixer"] }
gameplay = { path = "../gameplay" }
serde = { version = "*", features = ["serde_derive"] }
