[package]
name = "input"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
input-sdl2 = ["dep:sdl2"]
input-winit = ["dep:winit"]

[dependencies]
sdl2 = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
gameplay.workspace = true
gamestate-traits.workspace = true
nanoserde.workspace = true
