[package]
name = "doom-lib"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
build = "../build.rs"

[dependencies]
wad = { path = "../wad" }
sdl2 = "~0.34.0"
glam = "0.8.5"
gumdrop = "~0.7"
enumn = "0.1.3"
lump-vec = { git = "https://gitlab.com/flukejones/lump-vec" }

log = "^0.4"
env_logger = "^0.8"

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "load_map"
harness = false
path = "benches/parse_map.rs"

[[bench]]
name = "linked_lists"
harness = false
path = "benches/linked_lists.rs"
