[package]
name = "doom-lib"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
build = "../build.rs"

[dependencies]
wad = { path = "../wad" }
glam = "0.8.5"
gumdrop = "~0.8"
enumn = "0.1.3"

log = "^0.4"
env_logger = "^0.8"

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "load_map"
harness = false
path = "benches/parse_map.rs"
