[package]
name = "map-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../build.rs"

[features]
null_check = []
hprof = []

[dependencies]
coarse-prof.workspace = true
math.workspace = true
wad.workspace = true
glam.workspace = true
log.workspace = true
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.3"
dirs.workspace = true
bitflags = "2"
