[package]
name = "map-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../build.rs"

[features]
null_check = []
hprof = []

[dependencies]
coarse-prof.workspace = true
math.workspace = true
wad.workspace = true
glam.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
bincode.workspace = true
crc32fast.workspace = true
dirs.workspace = true
bitflags.workspace = true
