[package]
name = "pic-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
safety_check = []

[dependencies]
log.workspace = true
wad.workspace = true
zip.workspace = true

[dev-dependencies]
test-utils.workspace = true

[lints]
workspace = true
