[package]
name = "pvs-tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../build.rs"

[[bin]]
name = "pvs-tool"
path = "src/main.rs"

[dependencies]
map-data.workspace = true
wad.workspace = true
argh.workspace = true
log.workspace = true
simplelog.workspace = true
serde.workspace = true
serde_json.workspace = true
eframe.workspace = true
egui.workspace = true
glam.workspace = true
