[package]
name = "software-rendering"
version = "0.9.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
build = "../build.rs"

[dependencies]
glam = "0.8.5"
gameplay = { path = "../gameplay" }
rendering-trait = { path = "../rendering" }
sdl2 = { version = "~0.35.2", features = ["bundled"] }

[dev-dependencies]
wad = { path = "../wad" }
