[package]
name = "sound-sdl2"
version = "0.0.1"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
build = "../build.rs"

[features]
default = []
sdl2-bundled = ["sdl2/bundled"]

[dependencies]
wad = { path = "../wad" }
sound-traits = { path = "../sound-traits" }
log = "^0.4"
sdl2 = { version = "~0.35.2", features = ["mixer"] }
# Required for config options
serde = { version = "1.0", features = ["serde_derive"] }