[package]
name = "sound-sdl2"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"
build = "../build.rs"

[features]
default = []
sdl2-bundled = ["sdl2/bundled"]

[dependencies]
wad = { path = "../wad" }
sound-traits = { path = "../sound-traits" }
# versions are set by game crate
log = "*"
glam = "*"
sdl2 = { version = "*", features = ["mixer"] }
# Required for config options
serde = { version = "*", features = ["serde_derive"] }