[package]
name = "wad"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
vec2d = { path = "../vec2d" }

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "load_wads"
harness = false
path = "benches/wad_loading.rs"

[[bench]]
name = "load_map"
harness = false
path = "benches/parse_map.rs"
