[package]
name = "wad"
version = "0.1.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
glam = "0.8.5"
utils = { path = "../utils" }

[dev-dependencies]
criterion = "~0.3"
gamelib = { path = "../gamelib" }

[[bench]]
name = "load_wads"
harness = false
path = "benches/wad_loading.rs"
