[package]
name = "menu-doom"
version = "0.2.0"
authors = ["Luke Jones <luke@ljones.dev>"]
edition = "2021"

[dependencies]
gamestate-traits = { path = "../../gamestate-traits" }
sound-traits = { path = "../../sound/traits" }
wad = { path = "../../wad" }
# versions are set by game-exe crate
log = "*"
