[package]
name = "render-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]
default = []
display-sdl2 = ["dep:sdl2"]
display-softbuffer = ["dep:softbuffer", "dep:winit"]
display-pixels = ["dep:pixels", "dep:winit"]
safety_check = []
hprof = ["software25d/hprof", "software3d/hprof"]
render_stats = ["software3d/render_stats"]
trig_lut = ["software25d/trig_lut"]

[dependencies]
level.workspace = true
pic-data.workspace = true
math.workspace = true
render-common.workspace = true
software25d.workspace = true
software3d.workspace = true
hud-util.workspace = true
coarse-prof.workspace = true
sdl2 = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }
pixels = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
